# YDBOcto

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .oclint  CMakeLists.txt  Dockerfile  Dockerfile-Tests  Dockerfile-Tests.centos  Dockerfile-Tests.rocky  Dockerfile-Tests.ubuntu  Dockerfile-Tests.vista  Dockerfile.centos  LICENSE  README.md  pre-commit  pre-rebase
src/: CMakeLists.txt  add_key_num_keyword_if_needed.c  add_optional_piece_keyword_to_sql_column.c  alloc_keyword_of_type.c  assign_table_to_columns.c  auto_load_octo_seed.c  auto_load_octo_seed_if_needed.c  auto_upgrade_binary_definition_if_needed.c  auto_upgrade_binary_function_definition.c  auto_upgrade_binary_table_definition.c  auto_upgrade_binary_table_or_view_definition_helper.c  auto_upgrade_binary_view_definition.c  auto_upgrade_plan_definition_if_needed.c  binary_operation_data_type_check.c  check_column_lists_for_type_match.c  cleanup_sql_statement.c  cleanup_tables.c  column_list_alias_to_columns.c  columns_equal.c  columns_to_column_list_alias.c  compare_column_count_and_column_type_of_tables.c  compress_statement.c  config.h  constants.h.in  constraint_name_auto_generate.c  copy_column_list_alias_list.c  copy_sql_statement.c  copy_sql_table.c  create_cursor.c  create_table_defaults.c  decompress_statement.c  delete_function_from_pg_proc.c  delete_table_from_pg_class.c  delete_table_or_view_from_pg_class.c  describe_table_or_view_name.c  describe_tablename.c  describe_tablename_global.c  double_list.h  drill_to_table_alias.c  drop_schema_from_local_cache.c  (+178 more)
src/aux/: _ydboctoAdmin.m  _ydboctoCleanup.m  _ydboctoDiscard.m  _ydboctoDropTable.m  _ydboctoInit.m  _ydboctoNullSubsCheck.m  _ydboctoUtils.m  _ydboctoViewsUpgrade.m  _ydboctoZinterrupt.m  _ydboctocurrentSchema.m  _ydboctofCONCAT.m  _ydboctofCURRENTTIME.m  _ydboctofCURRENTTIMESTAMP.m  _ydboctofDATEFORMAT.m  _ydboctofLOCALTIME.m  _ydboctofLPAD.m  _ydboctofTODTFORMAT.m  _ydboctofTRUNCATE.m  _ydboctopgCurrentSchemas.m  _ydboctopgGetExpr.m  _ydboctopgGetUserbyid.m  _ydboctopgObjDescription.m  _ydboctopgRowNumber.m  _ydboctopgTableIsVisible.m  _ydboctopgfunctions.m  _ydboctoplanhelpers.m  _ydboctoreplace.m  _ydboctoselect.m  _ydboctosqlfunctions.m  _ydboctoversion.m  _ydboctoxrefupdate.m  build_m_files.cmake  calltab.ci  insert.m  install.sh  octo.conf  octo.conf.default  pack.m  select.m  tls.conf.default  (+6 more)
src/cmake/: cmocka-tests.cmake  tests.cmake
src/helpers/: get.c  helpers.h  make_buffers.c  set.c
src/m_templates/: emit_simple_select.c  print_dots.c  resize_tmpl_buffer.c  simpleFor.ctemplate  template_helpers.h  tmpl_base.ctemplate  tmpl_check_constraint.ctemplate  tmpl_column_list_combine.ctemplate  tmpl_column_reference.ctemplate  tmpl_column_reference_common.ctemplate  tmpl_column_reference_trigger.ctemplate  tmpl_constraint.ctemplate  tmpl_constraint_col_list.ctemplate  tmpl_convert_to_unix_time.ctemplate  tmpl_delete_from.ctemplate  tmpl_delete_record_from_table.ctemplate  tmpl_duplication_check.ctemplate  tmpl_emit_source.ctemplate  tmpl_group_by.ctemplate  tmpl_identity_column.ctemplate  tmpl_insert_into.ctemplate  tmpl_insert_row_count.ctemplate  tmpl_invoke_deferred_plan.ctemplate  tmpl_invoke_deferred_plan_lp_set_dnf.ctemplate  tmpl_invoke_deferred_plan_setoper.ctemplate  tmpl_key.ctemplate  tmpl_key_advance.ctemplate  tmpl_key_dollardata_check.ctemplate  tmpl_key_end.ctemplate  tmpl_key_finish.ctemplate  tmpl_key_skip.ctemplate  tmpl_key_source.ctemplate  tmpl_key_source_aim.ctemplate  tmpl_key_start.ctemplate  tmpl_limit_check.ctemplate  tmpl_order_by_key.ctemplate  tmpl_order_by_sort.ctemplate  tmpl_physical_plan.ctemplate  tmpl_populate_output_key.ctemplate  tmpl_print_date_time_addition.ctemplate  (+29 more)
src/octod/: error_codes.hd  free_error_response.c  get_plan_row_description.c  handle_bind.c  handle_describe.c  handle_execute.c  handle_parse.c  handle_query.c  handle_query_response.c  make_authentication_ok.c  make_bind_complete.c  make_command_complete.c  make_data_row.c  make_empty_query_response.c  make_error_response.c  make_parse_complete.c  make_ready_for_query.c  make_row_description.c  message_formats.h  octod.h  octod_main_loop.c  read_bind.c  read_bytes.c  read_describe.c  read_execute.c  read_message.c  read_parse.c  read_query.c  read_startup_message.c  read_sync.c  send_message.c  test_handle_bind.c  test_handle_query.c  test_make_authentication_md5_password.c  test_make_bind_complete.c  test_make_command_complete.c  test_make_data_row.c  test_make_error_response.c  test_make_ready_for_query.c  test_make_row_description.c  (+5 more)
src/optimization_transforms/: constant_equal_column.c  generate_logical_plan.c  get_new_plan_unique_id.c  get_plan_unique_number.c  logical_plan.c  logical_plan.h  lp_action_type.hd  lp_alloc_key.c  lp_column_list_to_lp.c  lp_columns_to_column_list.c  lp_copy_key.c  lp_copy_plan.c  lp_drill_to_insert.c  lp_emit_plan.c  lp_generate_check_constraint.c  lp_generate_column_list.c  lp_generate_constraint.c  lp_generate_new_keys.c  lp_generate_set_logical_plan.c  lp_generate_table_value.c  lp_generate_view.c  lp_generate_where.c  lp_generate_xref_keys.c  lp_generate_xref_plan.c  lp_get_aggregate_plan_helper_func_name.c  lp_get_col_num_n_in_select_column_list.c  lp_get_criteria.c  lp_get_key.c  lp_get_key_index.c  lp_get_keys.c  lp_get_num_cols_in_select_column_list.c  lp_get_output.c  lp_get_output_key.c  lp_get_plan_value_type.c  lp_get_project.c  lp_get_projection_columns.c  lp_get_select.c  lp_get_select_keywords.c  lp_get_select_where.c  lp_get_table_join.c  (+20 more)
src/parser/: aggregate_function.c  alloc_no_keyword.c  as_name.c  between_predicate.c  cast_specification.c  copy_correlation_specification_aliases.c  create_sql_column_list.c  data_type.c  delete.y  delete_from_statement.c  derived_column.c  derived_table.c  discard.y  drop.y  drop_function.c  dynamicsql.y  function_definition.c  grouping_column_reference.c  insert.y  insert_statement.c  natural_join_condition.c  parse_literal_to_parameter.c  query_specification.c  regex_specification.c  select.y  set.y  set_operation.c  (+14 more)
(+5326 files in other folders)
